Parity(bb2020) ITER2: make Java's unseeded Collections.shuffle reproducible, and port it 1:1
Chasing "Java dies on UNHANDLED_STEP: PRAYER" found something worse underneath. Those messages
are printed ONLY by ParityRunner -- the engine never emits them and is not failing; it raises a
PRAYER step and waits for a client command the harness had no case for.

But the prayer is chosen by bb2020/StepApplyKickoffResult.handleCheeringFans with

  Collections.shuffle(availablePrayerRolls);   // ONE-ARG overload
  int roll = availablePrayerRolls.remove(0);

and the one-arg overload draws from a private static Random inside java.util.Collections seeded
from system entropy -- not the game's DiceRoller. That is non-deterministic WITHIN JAVA: the same
parity seed can pick a different prayer on two runs, so no 1:1 port could mirror it. It fires in a
mirror match because handleCheeringFans compares two D6 rolls, not team values. (The pre-game
StepPrayers path is gated on abs(tvAway - tvHome), which is 0 in a mirror, and our home/away XML
are byte-identical apart from side naming.) The same call appears in bb2020/StepPrayers,
bb2025/StepPrayers, bb2025/StepThrowARock and bb2020/StepAssignTouchdowns -- unreachable in our
mirrors today, which is the only reason bb2025 is green.

Decision: mirror the shortcoming rather than switch it off, so parity stays total.

- ParityRunner.seedCollectionsShuffleRng seeds Collections' shared `r` per game by reflection from
  the parity seed. The ENGINE is untouched. Needs --add-opens java.base/java.util=ALL-UNNAMED,
  added by runner.rs to both JVM launchers. It throws loudly rather than degrading silently.
- ffb-model/src/util/java_random.rs: 1:1 ports of java.util.Random (48-bit LCG, next(bits),
  nextInt(bound) with the power-of-two shortcut and the rejection loop) and Collections.shuffle's
  Fisher-Yates.

Tests are pinned against REAL JVM output (Temurin 17.0.18), quoted with the Java snippet that
produced them, so they cannot be self-confirming